src/myst-md-rs/tests/snapshots/snapshot__block_math.snap
---
source: myst-md-rs/tests/snapshot.rs
expression: "myst_md_rs::render_html_with(src, myst_md_rs::MathBackend::MathJax)"
---
<div class="math notranslate nohighlight">\[E = mc^2\]</div>
