src/myst-md-rs/tests/snapshots/snapshot__colon_fence_directive.snap
---
source: myst-md-rs/tests/snapshot.rs
expression: "myst_md_rs::render_html(src)"
---
<div class="myst-directive" data-name="note"><pre><code>Heads up: this is **important**.
</code></pre></div>
