src/myst-md-rs/tests/snapshots/snapshot__features.snap
---
source: myst-md-rs/tests/snapshot.rs
expression: "myst_md_rs::features()"
---
[
    "core:commonmark",
    "core:gfm",
    "myst:front_matter",
    "myst:colon_fence",
    "myst:roles_inline",
    "myst:dollarmath_inline",
    "myst:dollarmath_block",
    "myst:definition_lists",
    "render:doctree",
    "render:html",
]
