src/myst-md-rs/tests/snapshots/snapshot__front_matter_yaml.snap
---
source: myst-md-rs/tests/snapshot.rs
expression: "r.front_matter_yaml.expect(\"yaml should parse\")"
---
title: hi
tags:
- a
- b
