src/myst-md-rs/tests/snapshots/snapshot__gfm_table.snap
---
source: myst-md-rs/tests/snapshot.rs
expression: "myst_md_rs::render_html(src)"
---
<table><thead><tr><th>a</th><th>b</th></tr></thead><tbody>
<tr><td>1</td><td>2</td></tr>
</tbody></table>
