src/myst-md-rs/tests/snapshots/snapshot__inline_math.snap
---
source: myst-md-rs/tests/snapshot.rs
expression: "myst_md_rs::render_html_with(src, myst_md_rs::MathBackend::MathJax)"
---
<p>let <span class="math notranslate nohighlight">\(a + b = c\)</span> then</p>
